refactor(core): 重构 App 和 Engine 连接管理逻辑
- 移动和重构连接管理相关的方法，增强代码可读性和可维护性
- 更新消息提交逻辑，支持连接来源的传递
- 优化日志输出格式，提升调试信息的清晰度
- 移除不必要的字段和方法，简化类结构