@@ -1,5 +1,6 @@
 package source.hanger.core.command.app;
 
+import lombok.extern.slf4j.Slf4j;
 import source.hanger.core.app.App;
 import source.hanger.core.app.AppEnvImpl;
 import source.hanger.core.connection.Connection;
@@ -7,7 +8,6 @@ import source.hanger.core.engine.Engine;
 import source.hanger.core.message.CommandResult;
 import source.hanger.core.message.command.Command;
 import source.hanger.core.tenenv.TenEnvProxy;
-import lombok.extern.slf4j.Slf4j;
 
 /**
  * `StopGraphCommandHandler` 处理 `StopGraphCommand` 命令，负责停止 Engine。
@@ -21,8 +21,8 @@ public class StopGraphCommandHandler implements AppCommandHandler {
 
         // StopGraphCommand 可能没有特定的 Command 子类，这里直接从 Command 中获取 graphId
         String graphIdToStop = command.getDestLocs() != null && !command.getDestLocs().isEmpty()
-                ? command.getDestLocs().get(0).getGraphId()
-                : null;
+            ? command.getDestLocs().getFirst().getGraphId()
+            : null;
 
         if (graphIdToStop != null && app.getEngines().containsKey(graphIdToStop)) { // 使用 app 实例
             Engine engineToStop = app.getEngines().remove(graphIdToStop); // 从 App 中移除 Engine
@@ -31,14 +31,14 @@ public class StopGraphCommandHandler implements AppCommandHandler {
                 log.info("StopGraphCommandHandler: Engine {} 已停止并从 App 中移除。", graphIdToStop);
                 if (connection != null) {
                     CommandResult successResult = CommandResult.success(command.getId(),
-                            "Engine " + graphIdToStop + " stopped successfully.");
+                        "Engine %s stopped successfully.".formatted(graphIdToStop));
                     connection.sendOutboundMessage(successResult);
                 }
             } else {
                 log.warn("StopGraphCommandHandler: 尝试停止不存在的 Engine {}。", graphIdToStop);
                 if (connection != null) {
                     CommandResult errorResult = CommandResult.fail(command.getId(),
-                            "Engine " + graphIdToStop + " not found or already stopped.");
+                        "Engine %s not found or already stopped.".formatted(graphIdToStop));
                     connection.sendOutboundMessage(errorResult);
                 }
             }
@@ -46,7 +46,7 @@ public class StopGraphCommandHandler implements AppCommandHandler {
             log.warn("StopGraphCommandHandler: 无法停止 Engine，因为 Graph ID 无效或 Engine 不存在: {}", graphIdToStop);
             if (connection != null) {
                 CommandResult errorResult = CommandResult.fail(command.getId(),
-                        "Invalid Graph ID or Engine not found: " + graphIdToStop);
+                    "Invalid Graph ID or Engine not found: %s".formatted(graphIdToStop));
                 connection.sendOutboundMessage(errorResult);
             }
         }
